WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50752
[EFL] Fix scroll operation in WebKit-EFL
https://bugs.webkit.org/show_bug.cgi?id=50752
Summary
[EFL] Fix scroll operation in WebKit-EFL
Alex Bredariol Grilo
Reported
2010-12-09 05:20:47 PST
[EFL] Fix scroll operation in WebKit-EFL
Attachments
Patch
(1.29 KB, patch)
2010-12-09 05:32 PST
,
Alex Bredariol Grilo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Bredariol Grilo
Comment 1
2010-12-09 05:32:01 PST
Created
attachment 76051
[details]
Patch
WebKit Commit Bot
Comment 2
2010-12-09 08:06:35 PST
Comment on
attachment 76051
[details]
Patch Clearing flags on attachment: 76051 Committed
r73610
: <
http://trac.webkit.org/changeset/73610
>
WebKit Commit Bot
Comment 3
2010-12-09 08:06:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug